# ultiserve

./: Cargo.toml  README.md  rustfmt.toml
assets/: Dracula.themedump
assets/templates/: base.html.tera  file.html.tera  index.html.tera  macros.html.tera
src/: main.rs
